<resources>
    <string name="app_name">CarmencitaConnect</string>
    <string name="version">versión 1</string>
    <string name="titulo_invitado">Ingresaste como invitado</string>
    <string name="titulo_menu_principal">Menu principal</string>
    <string name="btn_ver_agencias">Ver agencias</string>
    <string name="btn_tracking">Tracking</string>
    <string name="btn_cotizar">Cotizar</string>
    <string name="texto_ayuda">¿Necesitas ayuda?</string>
    <string name="texto_llamar">Llamar ahora</string>
    <string name="titulo_sedes">Directorio de agencias</string>
    <string name="subtitulo_sedes">Conoce nuestras agencias</string>
    <string name="descripcion_icono_agencia">Agencia</string>
    <string name="descripcion_abrir_ubicacion">Abrir ubicacion de la agencia</string>
    <string name="hu14_btn_llamar_sede">Llamar sede</string>
    <string name="hu14_descripcion_llamar_sede">Llamar a la sede seleccionada</string>
    <string name="hu14_telefono_no_disponible">La sede no tiene un telefono disponible</string>
    <string name="hu14_marcador_no_disponible">No se encontro una aplicacion para realizar llamadas</string>
    <string name="hu10_menu_notificaciones">Notificaciones</string>
    <string name="hu10_titulo_historial">Historial de notificaciones</string>
    <string name="hu10_subtitulo_historial">Revisa las notificaciones recibidas sobre tus envios</string>
    <string name="hu10_limpiar_historial">Limpiar historial</string>
    <string name="hu10_historial_vacio">No tienes notificaciones registradas</string>
    <string name="hu10_icono_notificacion">Notificacion</string>
    <string name="hu10_confirmar_limpiar_titulo">Limpiar historial</string>
    <string name="hu10_confirmar_limpiar_mensaje">Deseas eliminar todas las notificaciones del historial?</string>
    <string name="hu10_limpiar">Limpiar</string>
    <string name="hu10_cancelar">Cancelar</string>
    <string name="hu09_menu_alertas">Alertas de estado</string>
    <string name="hu09_titulo_alertas">Alertas de cambio de estado</string>
    <string name="hu09_subtitulo_alertas">Configura avisos para conocer el avance de tus envios</string>
    <string name="hu09_configurar_alertas">Recibir alertas de estado</string>
    <string name="hu09_encomienda_prueba">Encomienda de prueba</string>
    <string name="hu09_guia_demo">Guia: C000000001</string>
    <string name="hu09_simular_cambio">Simular cambio de estado</string>
    <string name="hu09_recojo_agencia">Tu paquete esta listo para recojo en agencia</string>
    <string name="hu06_menu_chatbot">Cotizar con chat</string>
    <string name="hu06_subtitulo_menu_chatbot">Asistente virtual</string>
    <string name="hu06_icono_chatbot">Icono de chatbot</string>
    <string name="hu06_titulo_chatbot">Asistente de tarifas</string>
    <string name="hu06_subtitulo_chatbot">Consulta costos aproximados y preguntas frecuentes</string>
    <string name="hu06_hint_mensaje">Escribe tu consulta</string>
    <string name="hu06_enviar">Enviar</string>
    <string name="titulo_cotizar">Cotiza tu envío</string>
    <string name="label_medidas">Ingresa las medidas de tu paquete</string>
    <string name="label_largo">Largo (cm)</string>
    <string name="label_ancho">Ancho (cm)</string>
    <string name="label_alto">Alto (cm)</string>
    <string name="label_ingresa_peso">Ingresa el peso de tu paquete</string>
    <string name="label_peso_kg">Peso (kg)</string>
    <string name="label_origen_destino">Ingresa el origen y destino</string>
    <string name="label_origen">Origen</string>
    <string name="label_destino">Destino</string>
    <string name="btn_calcular">Calcular tarifa</string>
    <string name="hint_largo">30</string>
    <string name="hint_ancho">20</string>
    <string name="hint_alto">20</string>
    <string name="hint_peso">5.50</string>
    <string name="tarifa_estimada">Tarifa estimada</string>
    <string name="tarifa_inicial">0.00</string>
    <string name="label_alto_caja">Alto</string>
    <string name="label_ancho_caja">Ancho</string>
    <string name="label_largo_caja">Largo</string>
    <string name="titulo_tracking">Rastrea tu envío</string>
    <string name="label_numero_guia">Número de guía</string>
    <string name="hint_guia">Ej. C0000000001</string>
    <string name="btn_buscar">Buscar envío</string>
    <string name="validando">Validando …</string>
    <string name="validando_guia">Validando número de guía</string>
    <string name="validando_espera">Por favor espera un momento</string>
    <string name="codigo_invalido">Código inválido</string>
    <string name="error_guia">El número de guía que ingresaste no existe</string>
    <string name="titulo_resultado">Tracking de envío</string>
    <string name="label_nro_guia">Nro de guía</string>
    <string name="label_estado">Estado actual</string>
    <string name="btn_nueva_busqueda">Nueva búsqueda</string>
    <string name="label_peso">Peso</string>
    <string name="titulo_linea_tiempo">Línea de tiempo</string>
    <string name="estado_registrado">Registrado</string>
    <string name="estado_transito">En tránsito</string>
    <string name="estado_agencia">En agencia</string>
    <string name="estado_entregado">Entregado</string>
    <string name="estado_pendiente">Pendiente</string>
    <string name="label_estado_actual">Estado actual</string>
    <string name="label_destino_envio">Destino</string>
    <string name="label_peso_envio">Peso</string>
    <string name="validando_titulo">Validando...</string>
    <string name="validando_subtitulo">Validando número de guía</string>
    <string name="btn_intentar">Intentar de nuevo</string>
    <string name="titulo_preregistro">Pre registro</string>
    <string name="label_completa_info">Completa la información</string>
    <string name="label_remitente">Remitente</string>
    <string name="label_destinatario">Destinatario</string>
    <string name="hint_remitente">John Elias</string>
    <string name="hint_destinatario">Luisa Torres</string>
    <string name="label_modo_pago">Selecciona tu modo de pago</string>
    <string name="btn_pago_agencia">Pago en agencia</string>
    <string name="btn_pago_digital">Pago digital</string>
    <string name="btn_continuar">Continuar</string>
    <string name="btn_cancelar_preregistro">Cancelar pre registro</string>
    <string name="error_campo_vacio">Completa todos los campos</string>
    <string name="error_solo_letras">Solo se permiten letras</string>
    <string name="error_selecciona_pago">Selecciona un método de pago</string>
    <string name="btn_realizar_preregistro">Realizar pre-registro</string>
    <string name="titulo_pago_digital">Pago digital</string>
    <string name="label_selecciona_metodo">Selecciona tu método de pago</string>
    <string name="metodo_tarjeta">Tarjeta de crédito / débito</string>
    <string name="label_visa">VISA</string>
    <string name="label_mc">MC</string>
    <string name="label_amex">AMEX</string>
    <string name="metodo_yape">Yape</string>
    <string name="metodo_transferencia">Transferencia bancaria</string>
    <string name="label_detalles_envio">Detalles del envío</string>
    <string name="label_destino_pago">Destino</string>
    <string name="label_remitente_pago">Remitente</string>
    <string name="label_destinatario_pago">Destinatario</string>
    <string name="label_modo_pago_detalle">Modo de pago</string>
    <string name="label_costo">Costo (S/)</string>
    <string name="label_medidas_detalle">Medidas</string>
    <string name="label_peso_detalle">Peso (kg)</string>
    <string name="btn_confirmar_pago_digital">Confirmar Pago Digital</string>
    <string name="btn_cancelar_pago_digital">Cancelar Pago Digital</string>
    <string name="validando_pago_titulo">Validando ...</string>
    <string name="validando_pago_subtitulo">Validando método de pago</string>
    <string name="pago_digital_exitoso">¡Pago Digital realizado exitosamente!</string>
    <string name="label_numero_preregistro">Número de pre registro</string>
    <string name="btn_inicio">Inicio</string>
    <string name="btn_descargar_comprobante">Descargar comprobante de pago</string>
    <string name="error_selecciona_metodo_pago">Selecciona un método de pago</string>
    <string name="titulo_pago_en_agencia">Pago en Agencia</string>
    <string name="titulo_pago_agencia_exitoso">¡Pago en Agencia realizado exitosamente!</string>
    <string name="mensaje_pagar_oficina">Acércate a nuestra agencia con este código para realizar el pago.</string>
    <string name="btn_confirmar_pago_agencia">Confirmar Pago en Agencia</string>
    <string name="btn_cancelar_pago_agencia">Cancelar Pago en Agencia</string>
    <string name="generando_comprobante">Generando tu comprobante </string>
    <string name="generando_espera">Por favor espera un momento</string>
    <string name="comprobante_exitoso">¡Comprobante descargado con éxito!</string>
    <string name="btn_inicio_comprobante">Inicio</string>
    <string name="label_numero_boleta">Número de pre registro</string>
    <string name="icono_check">✓</string>
    <string name="dialog_titulo_cancelar">Cancelar pre-registro</string>
    <string name="dialog_mensaje_cancelar">¿Estás seguro que deseas cancelar? Se perderán los datos ingresados.</string>
    <string name="btn_no_volver">No, volver</string>
    <string name="btn_si_cancelar">Sí, cancelar</string>
    <string name="label_datos_remitente">Datos del remitente</string>
    <string name="label_dni_remitente">DNI remitente</string>
    <string name="label_telefono_remitente">Teléfono remitente</string>
    <string name="label_direccion_remitente">Dirección remitente</string>
    <string name="hint_dni_remitente">12345678</string>
    <string name="hint_telefono_remitente">987654321</string>
    <string name="hint_direccion_remitente">Av. ejemplo 123</string>
    <string name="label_datos_destinatario">Datos del destinatario</string>
    <string name="label_dni_destinatario">DNI destinatario</string>
    <string name="label_telefono_destinatario">Teléfono destinatario</string>
    <string name="label_direccion_destinatario">Dirección destinatario</string>
    <string name="hint_dni_destinatario">12345678</string>
    <string name="hint_telefono_destinatario">987654321</string>
    <string name="hint_direccion_destinatario">Av. ejemplo 123</string>
    <string name="label_descripcion_carga">Descripción de la carga</string>
    <string name="hint_descripcion_carga">Ej: ropa, electrodomésticos, documentos...</string>
    <string name="historial_tracking_titulo">Últimos códigos consultados</string>
    <string name="historial_tracking_subtitulo">Selecciona uno para ver su estado</string>
    <string name="historial_tracking_limpiar">Limpiar historial</string>
    <string name="historial_tracking_vacio_titulo">No existen búsquedas recientes</string>
    <string name="historial_tracking_vacio_mensaje">Los códigos de seguimiento que consultes aparecerán aquí</string>
    <string name="historial_tracking_icono">Historial de consultas</string>
    <string name="historial_tracking_consultar">Consultar código</string>
    <string name="hu12_titulo_agenda">Agenda de contactos</string>
    <string name="hu12_subtitulo_agenda">Tus destinatarios frecuentes</string>
    <string name="hu12_hint_buscar">Buscar contacto por nombre o DNI</string>
    <string name="hu12_agregar_contacto">+ Agregar contacto</string>
    <string name="hu12_agenda_vacia">No tienes contactos guardados</string>
    <string name="hu12_titulo_nuevo">Nuevo contacto</string>
    <string name="hu12_titulo_editar">Editar contacto</string>
    <string name="hu12_contacto">Contacto</string>
    <string name="hu12_nombre">Nombre completo</string>
    <string name="hu12_dni">DNI</string>
    <string name="hu12_telefono">Telefono</string>
    <string name="hu12_hint_telefono">Ej: 999999999</string>
    <string name="hu12_guardar_cambios">Guardar cambios</string>
    <string name="hu12_cancelar">Cancelar</string>
</resources>